[Abhishek] Added the main files

--- a/EmployeePayroll_MVC/Views/Employee/Add.cshtml
+++ b/EmployeePayroll_MVC/Views/Employee/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeePayroll_MVC.Models.EmployeeModel
+﻿@model EmployeePayroll_MVC.Models.EmployeeModel           //type of model data passed
 
 @{
     ViewData["Title"] = "Add";
